--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,9 @@
     tools:context=".MainActivity">
 
     <ru.netology.statsview.ui.StatsView
-        android:id="@+id/statsView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:id="@+id/statsViewParallel"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:textSize="20sp"
         app:lineWidth="15dp"
         app:color1="#391279"
@@ -18,9 +18,44 @@
         app:color3="#182957"
         app:color4="#582012"
         app:colorCircle="#DFDFDF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:mode="parallel"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <ru.netology.statsview.ui.StatsView
+        android:id="@+id/statsViewSequential"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:textSize="20sp"
+        app:lineWidth="15dp"
+        app:color1="#391279"
+        app:color2="#939124"
+        app:color3="#182957"
+        app:color4="#582012"
+        app:colorCircle="#DFDFDF"
+        app:mode="sequential"
+        app:layout_constraintTop_toBottomOf="@id/statsViewParallel"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <ru.netology.statsview.ui.StatsView
+        android:id="@+id/statsViewBidirectional"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:textSize="20sp"
+        app:lineWidth="15dp"
+        app:color1="#391279"
+        app:color2="#939124"
+        app:color3="#182957"
+        app:color4="#582012"
+        app:colorCircle="#DFDFDF"
+        app:mode="bidirectional"
+        app:layout_constraintTop_toBottomOf="@+id/statsViewSequential"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
