--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,5 +8,10 @@
         <attr name="color3" format="color|reference" />
         <attr name="color4" format="color|reference" />
         <attr name="colorCircle" format="color|reference" />
+        <attr name="mode" format="enum">
+            <enum name="parallel" value="0" />
+            <enum name="sequential" value="1" />
+            <enum name="bidirectional" value="2" />
+        </attr>
     </declare-styleable>
 </resources>
